카카오 로그인 구현

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,12 +1,30 @@
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
-spring.datasource.username=scott
-spring.datasource.password=!Ds1234567890
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
+#spring.datasource.username=scott
+#spring.datasource.password=!Ds1234567890
+
+### \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+### jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=\uC804\uC790\uC9C0\uAC11\uACBD\uB85C
+##spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=/Users/kangtaegyung/eWallet/Wallet_orcl/
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/eWallet/Wallet_orcl/
+#spring.datasource.username=scott
+#spring.datasource.password=!Ds1234567890
+
+#// MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#// DB Source URL
+spring.datasource.url=jdbc:mysql://localhost:3306/board
+#// DB username
+spring.datasource.username=user1
+#// DB password
+spring.datasource.password=user1
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
 # jpa ??
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 # sql log ??
 spring.jpa.properties.hibernate.format_sql=true
@@ -34,3 +52,5 @@ spring.datasource.hikari.poolName=HikariPoolBooks
 # jwt
 simpleDms.app.jwtSecret= simpleSecretKey
 simpleDms.app.jwtExpirationMs= 86400000
+
+kakao.api.key=${KAKAO_API_KEY}
