--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,47 +1,50 @@
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
+spring.datasource.username=scott
+spring.datasource.password=!Ds1234567890
+
+## \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
 #spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
+## jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=\uC804\uC790\uC9C0\uAC11\uACBD\uB85C
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=/Users/kangtaegyung/eWallet/Wallet_orcl/
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/94_eWallet/Wallet_orcl
 #spring.datasource.username=scott
 #spring.datasource.password=!Ds1234567890
+#spring.datasource.oracleucp.max-connection-reuse-count=1
 
-### \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-### jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=\uC804\uC790\uC9C0\uAC11\uACBD\uB85C
-##spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=/Users/kangtaegyung/eWallet/Wallet_orcl/
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/eWallet/Wallet_orcl/
-#spring.datasource.username=scott
-#spring.datasource.password=!Ds1234567890
+##// MySQL
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##// DB Source URL
+#spring.datasource.url=jdbc:mysql://localhost:3306/board
+##// DB username
+#spring.datasource.username=user1
+##// DB password
+#spring.datasource.password=user1
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
-#// MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#// DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/board
-#// DB username
-spring.datasource.username=user1
-#// DB password
-spring.datasource.password=user1
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
-# jpa ??
+# jpa \uC124\uC815
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
-# sql log ??
+# sql log \uCC0D\uAE30
 spring.jpa.properties.hibernate.format_sql=true
-#Logging Setting , hibernate info ?? ?? ?? : debug, trace ?
+#Logging Setting , hibernate info \uB808\uBCA8 \uB85C\uAE45 \uC124\uC815 : debug, trace \uB4F1
 logging.level.org.hibernate=info
-# batch size ?? : ???? ?? ? N+1 ?? ???
-#  ?? ?? SELECT ???? ??? IN ??? ????
+# batch size \uC124\uC815 : \uC5F0\uAD00\uAD00\uACC4 \uC124\uC815 \uC2DC N+1 \uBB38\uC81C \uCD5C\uC18C\uD654
+#  \uC5EC\uB7EC \uAC1C\uC758 SELECT \uCFFC\uB9AC\uB4E4\uC744 \uD558\uB098\uC758 IN \uCFFC\uB9AC\uB85C \uB9CC\uB4E4\uC5B4\uC90D
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
-# 1) resource/data.sql ?? ?? ( DML ?? )
-#  -> data.sql ( dml ?? ), schema.sql ( ddl ?? )
+# 1) resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
+#  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
 spring.jpa.defer-datasource-initialization=true
-
+# 2)  resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
+#  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
 spring.sql.init.mode=always
-# sql ?? ???? ??? ?? ??
+# sql \uC5D0\uB7EC \uBB34\uC2DC\uD558\uACE0 \uC2A4\uD504\uB9C1 \uC11C\uBC84 \uB85C\uB529
 spring.sql.init.continue-on-error=true
 
-# ?? ?? ??? ??? ?? ?? ???
+# \uC790\uBC14 \uC18C\uC2A4 \uBCC0\uACBD\uC2DC \uC2A4\uD504\uB9C1 \uC11C\uBC84 \uC790\uB3D9 \uC7AC\uC2DC\uC791
 spring.devtools.restart.enabled=true
 
 # HikariCP settings
@@ -53,4 +56,16 @@ spring.datasource.hikari.poolName=HikariPoolBooks
 simpleDms.app.jwtSecret= simpleSecretKey
 simpleDms.app.jwtExpirationMs= 86400000
 
-kakao.api.key=${KAKAO_API_KEY}
+kakao.api.key=f654831968d706a2ee9f331f4fbbd897
+
+naver.client.key=X2zNwVsXYqJbMW4DzED6
+naver.secret.key=mqL4sDvEAH
+
+google.client.id=469092532242-bmki33ke6ljphieo2326br43g0r9h29d.apps.googleusercontent.com
+google.client.secret=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
+
+
+state=wjfowiefjoweijf
+
+
+
