로그인/회원가입 화면 세부 구현

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
-spring.datasource.username=scott
-spring.datasource.password=!Ds1234567890
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@59.28.90.58:2333/xepdb1
+spring.datasource.username=GBS
+spring.datasource.password=gbs
 
 ## \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
 #spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
