--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.16",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,13 +20,21 @@
     "@types/yup": "^0.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.21.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "styled-components": "^6.1.1",
     "typed.js": "^2.0.16",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -53,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.19.3"
   }
 }
