--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -22,11 +22,11 @@ logging.level.org.hibernate=info
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 # 1) resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
 #  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 
 # 2)  resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
 #  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 # sql \uC5D0\uB7EC \uBB34\uC2DC\uD558\uACE0 \uC2A4\uD504\uB9C1 \uC11C\uBC84 \uB85C\uB529
 spring.sql.init.continue-on-error=true
