--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@59.28.90.58:2333/xepdb1
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
 spring.datasource.username=GBS
 spring.datasource.password=gbs
 
