--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
+    "isotope-layout": "^3.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/isotope-layout": "^3.0.12",
     "@types/react-datepicker": "^4.19.3"
   }
 }
