--- a/front/package.json
+++ b/front/package.json
@@ -6,29 +6,27 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
-    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/aos": "^3.0.6",
+    "@types/bootstrap": "^5.2.9",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "^18.2.14",
-    "@types/yup": "^0.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
-    "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "typed.js": "^2.0.16",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
