--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,26 +1,11 @@
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
-spring.datasource.username=GBS
-spring.datasource.password=gbs
 
 ## \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-## jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=\uC804\uC790\uC9C0\uAC11\uACBD\uB85C
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=/Users/kangtaegyung/eWallet/Wallet_orcl/
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/94_eWallet/Wallet_orcl
-#spring.datasource.username=scott
-#spring.datasource.password=!Ds1234567890
-#spring.datasource.oracleucp.max-connection-reuse-count=1
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Users/Administrator/Desktop/Wallet_orcl
+spring.datasource.username=greenair
+spring.datasource.password=!Ds1234567890
+spring.datasource.oracleucp.max-connection-reuse-count=1
 
-##// MySQL
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-##// DB Source URL
-#spring.datasource.url=jdbc:mysql://localhost:3306/board
-##// DB username
-#spring.datasource.username=user1
-##// DB password
-#spring.datasource.password=user1
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
 
 # jpa \uC124\uC815
