--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
-spring.datasource.username=scott
+# jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=??????
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/96_eWallet/Wallet_orcl
+spring.datasource.username=greenair
 spring.datasource.password=!Ds1234567890
-
 # jpa ??
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
