--- a/front/package.json
+++ b/front/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/isotope-layout": "^3.0.12"
+    "@types/isotope-layout": "^3.0.12",
+    "@types/jquery": "^3.5.29"
   }
 }
