--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.0",
     "@types/aos": "^3.0.6",
     "@types/bootstrap": "^5.2.9",
     "@types/jest": "^27.5.2",
