--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8000
+
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 # jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=??????
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/96_eWallet/Wallet_orcl
