--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "isotope-layout": "^3.0.6",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -41,6 +42,7 @@
     "styled-components": "^6.1.1",
     "typed.js": "^2.0.16",
     "typescript": "^4.9.5",
+    "waypoints": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
