--- a/back/build.gradle
+++ b/back/build.gradle
@@ -24,6 +24,10 @@ repositories {
 
 dependencies {
 
+    //  jwt
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation "javax.xml.bind:jaxb-api"
     //    오라클 라이브러리( 19c )
     implementation 'com.oracle.database.jdbc:ucp:19.14.0.0'
     implementation 'com.oracle.database.security:oraclepki:19.14.0.0'
