--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -3,13 +3,12 @@
 #spring.datasource.username=scott
 #spring.datasource.password=!Ds1234567890
 
-
+## \uC624\uB77C\uD074 \uC124\uC815 ( \uC624\uB77C\uD074 \uD074\uB77C\uC6B0\uB4DC \uC804\uC790\uC9C0\uAC11 \uC124\uC815 ) : log4j \uC801\uC6A9
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-
+# jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=\uC804\uC790\uC9C0\uAC11\uACBD\uB85C
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Work/94_eWallet/Wallet_orcl
 spring.datasource.username=greenair
 spring.datasource.password=!Ds1234567890
-
 
 server.port:8000
 
@@ -28,9 +27,10 @@ logging.level.org.hibernate=info
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 # 1) resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
 #  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
-
-spring.jpa.defer-datasource-initialization=false
-
+spring.jpa.defer-datasource-initialization=true
+# 2)  resource/data.sql \uC790\uB3D9 \uC2E4\uD589 ( DML \uC2E4\uD589 )
+#  -> data.sql ( dml \uC2E4\uD589 ), schema.sql ( ddl \uC2E4\uD589 )
+spring.sql.init.mode=always
 # sql \uC5D0\uB7EC \uBB34\uC2DC\uD558\uACE0 \uC2A4\uD504\uB9C1 \uC11C\uBC84 \uB85C\uB529
 spring.sql.init.continue-on-error=true
 
@@ -41,7 +41,6 @@ spring.devtools.restart.enabled=true
 spring.datasource.hikari.minimumIdle=1
 spring.datasource.hikari.maximumPoolSize=1
 spring.datasource.hikari.poolName=HikariPoolBooks
-
 
 # jwt
 simpleDms.app.jwtSecret= simpleSecretKey
@@ -56,5 +55,3 @@ google.client.id=469092532242-bmki33ke6ljphieo2326br43g0r9h29d.apps.googleuserco
 google.client.secret=${GOOGLE_SECRET_KEY}
 
 state=${STATE}
-
-
