--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,53 @@
 
+# ?? ??
+server.port=8000
+
+# ??? ?? : log4j ?? : ??
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
+#spring.datasource.username=scott
+#spring.datasource.password=!Ds1234567890
+
+### ??? ?? ( ??? ???? ???? ?? ) : log4j ??
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+# jdbc:log4jdbc:oracle:thin:@orcl_medium?TNS_ADMIN=??????
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=/Users/kangtaegyung/eWallet/Wallet_orcl/
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@orcl_low?TNS_ADMIN=C:/Users/Administrator/Descktop/Wallet_orcl/
+spring.datasource.username=greenair
+spring.datasource.password=!Ds1234567890
+
+
+# jpa ??
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+# sql log ??
+spring.jpa.properties.hibernate.format_sql=true
+#Logging Setting , hibernate info ?? ?? ?? : debug, trace ?
+logging.level.org.hibernate=info
+# batch size ?? : ???? ?? ? N+1 ?? ???
+#  ?? ?? SELECT ???? ??? IN ??? ????
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+# 1) resource/data.sql ?? ?? ( DML ?? )
+#  -> data.sql ( dml ?? ), schema.sql ( ddl ?? )
+spring.jpa.defer-datasource-initialization=true
+# 2)  resource/data.sql ?? ?? ( DML ?? )
+#  -> data.sql ( dml ?? ), schema.sql ( ddl ?? )
+spring.sql.init.mode=always
+# sql ?? ???? ??? ?? ??
+spring.sql.init.continue-on-error=true
+
+# ?? ?? ??? ??? ?? ?? ???
+spring.devtools.restart.enabled=true
+
+# todo: HikariCP settings : DB ??? ?(?? 10? ) => ?? 1?? ??
+spring.datasource.hikari.minimumIdle=1
+spring.datasource.hikari.maximumPoolSize=1
+spring.datasource.hikari.poolName=HikariPoolBooks
+
+# todo: file upload ?? size ??(?? 1M)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
