--- a/back/build.gradle
+++ b/back/build.gradle
@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
 
-
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     //  jwt
     implementation 'org.springframework.boot:spring-boot-starter-security'
