--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -57,16 +57,16 @@ simpleDms.app.jwtExpirationMs= 86400000
 kakao.api.key=f654831968d706a2ee9f331f4fbbd897
 
 naver.client.key=X2zNwVsXYqJbMW4DzED6
-naver.secret.key=${NAVER_SECRET_KEY}
+naver.secret.key=mqL4sDvEAH
 
 google.client.id=469092532242-bmki33ke6ljphieo2326br43g0r9h29d.apps.googleusercontent.com
-google.client.secret=${GOOGLE_SECRET_KEY}
+google.client.secret=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
 
-state=${STATE}
+state=wjfowiefjoweijf
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${GMAIL_ID}
+spring.mail.username=cloug91
 spring.mail.password=${GMAIL_PW}
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=true
